sandbox/output
PatientTest.java:12: error: constructor Codeine in class Codeine cannot be applied to given types;
        Medicine codeine = new Codeine(Arrays.asList(prescription));
                           ^
  required: no arguments
  found: List<Prescription>
  reason: actual and formal argument lists differ in length
PatientTest.java:13: error: cannot find symbol
        assertEquals(0, patient.clash(Arrays.asList(codeine, prozac), 90));
                        ^
  symbol:   variable patient
  location: class PatientTest
PatientTest.java:13: error: cannot find symbol
        assertEquals(0, patient.clash(Arrays.asList(codeine, prozac), 90));
                                                             ^
  symbol:   variable prozac
  location: class PatientTest
3 errors
